--- a/index.html
+++ b/index.html
@@ -18,24 +18,10 @@
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 </head>
 
 <body>
-    <style>
-        .trophy-icon {
-    font-size: 4rem;
-    color: #ffcc00;
-    text-shadow: 0 0 20px rgba(255, 204, 0, 1);
-    animation: trophyBounce 1.5s infinite alternate;
-}
-
-@keyframes trophyBounce {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-10px); }
-}
-    </style>
     <canvas id="starsCanvas"></canvas>
     <!-- Hero section   -->
     <section id="section-1" class="container-fluid d-flex flex-column justify-content-center align-items-center">
@@ -55,13 +41,9 @@
         <div class="countdown" id="countdown"></div>
 
         <div class="registration-buttons d-flex flex-column flex-md-row gap-3">
-            <a href="https://unstop.com/o/l1tyF2T?lb=Z8t5GW62" class="register-btn student-btn" target="_blank" rel="noopener noreferrer">
-                Student Registration
-            </a>
-            <a href="https://unstop.com/o/dj4okxE?lb=Z8t5GW62" class="register-btn expert-btn" target="_blank" rel="noopener noreferrer">
-                Expert Registration
-            </a>
-        </div>        
+            <a href="https://unstop.com/o/l1tyF2T?lb=Z8t5GW62" class="register-btn student-btn">Student Registration</a>
+            <a href="https://unstop.com/o/dj4okxE?lb=Z8t5GW62" class="register-btn expert-btn">Expert Registration</a>
+        </div>
 
         <div id="shape-2">
             <img src="assets/kf88ycme.png" alt="Decorative Shape" class="img-fluid">
@@ -141,18 +123,22 @@
                     <p class="rules-subtitle">Follow these guidelines to ensure a fair and fun competition!</p>
                 </div>
             </div>
-    
+
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <ul class="rules-list">
                         <li><i class="fas fa-check-circle"></i> Teams can have 2 to 4 members.</li>
-                        <li><i class="fas fa-check-circle"></i> Problem statements will be allocated at the inauguration ceremony.</li>
-                        <li><i class="fas fa-check-circle"></i> Registration fee: ₹1000 for experts, ₹800 for students.</li>
-                        <li><i class="fas fa-check-circle"></i> 24-hour hackathon with checkpoints.</li>
                         <li><i class="fas fa-check-circle"></i> Bring your own laptops and chargers.</li>
-                        <li><i class="fas fa-check-circle"></i> No plagiarism or pre-built templates allowed.</li>   
+                        <li><i class="fas fa-check-circle"></i> No plagiarism or pre-built templates allowed.</li>
+                        <li><i class="fas fa-check-circle"></i> 24-hour hackathon with checkpoints.</li>
                         <li><i class="fas fa-check-circle"></i> Internet access is provided, but no external help.</li>
-                        <li><i class="fas fa-check-circle"></i> Projects will be judged on innovation, execution, and impact.</li> 
+                        <li><i class="fas fa-check-circle"></i> Projects will be judged on innovation, execution, and
+                            impact.</li>
+                        <li><i class="fas fa-check-circle"></i> Submissions must be made before the deadline.</li>
+                        <li><i class="fas fa-check-circle"></i> Registration fee: ₹1000 for experts, ₹800 for students.
+                        </li>
+                        <li><i class="fas fa-check-circle"></i> Problem statements will be allocated at the inauguration
+                            ceremony.</li>
                         <li><i class="fas fa-check-circle"></i> Violations of rules may lead to disqualification.</li>
                     </ul>
                 </div>
@@ -168,10 +154,10 @@
             <div class="prize-card">
                 <h3 class="section-title-prize">Grand Prize Pool</h3>
                 <div class="prize-amount-glow">
-                    <i class="fas fa-trophy trophy-icon"></i>
                     <span class="prize-amount">₹100,000</span>
                     <div class="glow"></div>
                 </div>
+                <!-- <p class="section-subtitle">Total winnings up for grabs</p> -->
             </div>
         </div>
     </section>
@@ -179,6 +165,8 @@
 
     <div class="line"></div>
 
+    <!-- process section  -->
+    <!-- PROCESS SECTION -->
     <section id="Process">
         <div class="process-content">
             <div class="process-text">
@@ -348,6 +336,78 @@
 
     <div class="line"></div>
 
+    <!-- COMMUNITY PARTNERS SECTION -->
+    <section id="community-partners">
+        <div class="container">
+            <div class="section-header text-center">
+                <h2 class="partners-title">Community Partners</h2>
+                <p class="partners-subtitle">
+                    Our hackathon is made possible with the support of these amazing partners
+                </p>
+            </div>
+
+            <div class="partners-grid">
+                <!-- Row 1 -->
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/mgmGDG.png" alt="Google Developer Groups" class="partner-logo">
+                    </div>
+                </div>
+
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/iei logo.png" alt="IEI" class="partner-logo">
+                    </div>
+                </div>
+
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/cuc1.png" alt="CUC" class="partner-logo">
+                    </div>
+                </div>
+
+                <!-- Row 2 -->
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/SGGS Logo.png" alt="SGGS" class="partner-logo">
+                    </div>
+                </div>
+
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/NBNSCOE Logo.png" alt="NBNSCOE" class="partner-logo">
+                    </div>
+                </div>
+
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/AIT Logo.png" alt="AIT" class="partner-logo">
+                    </div>
+                </div>
+
+                <!-- Row 3 -->
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/PUSSGRC logo.png" alt="PUSSGRC" class="partner-logo">
+                    </div>
+                </div>
+
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/kanpur.png" alt="Kanpur" class="partner-logo">
+                    </div>
+                </div>
+
+                <div class="partner-card">
+                    <div class="partner-logo-container">
+                        <img src="assets/logos/mumbai.png" alt="Mumbai" class="partner-logo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="line"></div>
+
 
     <!-- CONTACT IS SCTION  -->
 
@@ -365,23 +425,25 @@
                 <div class="col text-center venue-info">
                     <h3>Our Venue</h3>
                     <p>Department of Computer Science & Engineering (CSE), MGM's College of Engineering</p>
-                    <p>Phone: 7447523950</p>
+                    <p>Phone: 8767085869, 9021226872 </p>
                     <p>Email: hackspectra@mgmcen.ac.in</p>
                 </div>
             </div>
             <!-- Social Media Icons -->
             <div class="row">
                 <div class="col text-center social-icons">
-                    <a href="https://linkedin.com" target="_blank" class="social-icon">
+                    <a href="http://www.linkedin.com/in/hackspectra" target="_blank" class="social-icon">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://instagram.com" target="_blank" class="social-icon">
+                    <a href="https://www.instagram.com/hackspectra_mgm/?hl=en" target="_blank" class="social-icon">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
         </div>
     </section>
+
+
 
 
 
@@ -401,8 +463,8 @@
     <script src="gsap/stars.js"></script>
     <script src="gsap/HeroSection.js"></script>
     <script src="gsap/planet.js"></script>
-    <script src="gsap/planet3.js"></script>
-    <script src="gsap/prize.js"></script>
+    <!-- <script src="gsap/planet3.js"></script> -->
+    <!-- <script src="gsap/prize.js"></script> -->
     <!-- <script src="gsap/fog.js"></script> -->
 </body>
 
