--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+      
 </head>
 
 <body>
@@ -152,7 +153,10 @@
     <section id="Prize" class="prize-section">
         <div class="container">
             <div class="prize-card">
-                <h3 class="section-title-prize">Grand Prize Pool</h3>
+                <h3 class="section-title-prize">
+                    <i class="fas fa-trophy" style="color: gold; margin-right: 10px;"></i>
+                    Grand Prize Pool
+                </h3>
                 <div class="prize-amount-glow">
                     <span class="prize-amount">₹100,000</span>
                     <div class="glow"></div>
@@ -161,8 +165,7 @@
             </div>
         </div>
     </section>
-
-
+    
     <div class="line"></div>
 
     <!-- process section  -->
